# python-playground

./: README.md
graph-neural-network/: initialize_environment.py  main.py  pyproject.toml
sensor-dashboard-plotly/: app.py  chart_utils.py  pyproject.toml  utils.py
sensor-dashboard-plotly/templates/: base.html  charts.html  index.html  sensor_data.html
