[project]
name = "graph-neural-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
