[project]
name = "sensor-dashboard-plotly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arel>=0.3.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
]
